--- a/pokedex/templates/display_pokemon.html
+++ b/pokedex/templates/display_pokemon.html
@@ -1,15 +1,21 @@
-<html>
-    <head>
-        <title>Pokedex</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="bg-primary text-white p-4 text-center">
-                <h1>Mi Pokedex</h1>
-            </div>
-            <p>Has elegido el pokemon: <strong>{{ pokemon | capfirst }}</strong></p>
+{% extends "base.html" %}
+{% load static %}
+{% block title %}{{trainer}}{% endblock title %}
+{% block content %}
+    <div class="container">
+        <p style="font-size: 1.7em; margin-top: 1em; margin-bottom: 1em;" class= "text-center"><strong>{{ pokemon | capfirst }}</strong> details</p>
+        <h3>Features:</h3>
+        <ul class="list-group">
+            <li class="list-group-item"><strong><img src="{% static 'pokeball.svg' %}" alt="Pokeball" style="width:24px; height:24px; margin-right:10px;">Type:</strong> {{ pokemon.get_type_display }}</li>
+            <li class="list-group-item"><strong><img src="{% static 'pokeball.svg' %}" alt="Pokeball" style="width:24px; height:24px; margin-right:10px;">Weight:</strong> {{ pokemon.weight }}kg</li>
+            <li class="list-group-item"><strong><img src="{% static 'pokeball.svg' %}" alt="Pokeball" style="width:24px; height:24px; margin-right:10px;">Height:</strong> {{ pokemon.height }}cm</li> 
+        </ul>
+        <div class="d-flex justify-content-center">
+            <a href="/pokemon">
+                <button style="margin-top: 3em;" class="btn btn-outline-primary btn-lg btn-block">
+                    <h6>Return</h6>
+                </button>
+            </a>
         </div>
-    </body>
-</html>
+    </div>
+{% endblock content %}
