--- a/pokedex/templates/index.html
+++ b/pokedex/templates/index.html
@@ -1,22 +1,30 @@
-<html>
-    <head>
-        <title>Pokedex</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="container">
-            <div class="bg-primary text-white p-4 text-center">
-                <h1>Mi Pokedex</h1>
+{% extends "base.html" %}
+{% load static %}
+{% block title %}Menu{% endblock title %}
+{% block content %}
+<p style="font-size: 1.7em; margin-top: 1em; margin-bottom: 1em;" class= "text-center">Choose what you want to see:</p>
+    <div class="container mt-4">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-6 mb-3">
+                        <a href="pokemon/">
+                            <button class="btn btn-outline-primary btn-lg btn-block">
+                                <img src="{% static 'pokemon.png' %}" alt="Pokemons" class="img-fluid">
+                                <span>Pokemons</span>
+                            </button>
+                        </a>
+                    </div>
+                    <div class="col-6 mb-3">
+                        <a href="trainer/">
+                        <button class="btn btn-outline-primary btn-lg btn-block">
+                            <img src="{% static 'trainer.png' %}" alt="Trainers" class="img-fluid" width="128" height="128">
+                            <span>Trainers</span>
+                        </button>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <p class="p-2">Hola, este es tu primer sitio en Django</p>
-            <ul class="list-group">
-                {% for pokemon in pokemons %}
-                <li class="list-group-item">
-                    <a href="{{pokemon}}">{{ pokemon | capfirst }}</a>
-                </li>
-                {% endfor %}
-            </ul>
         </div>
-    </body>
-</html>
+    </div>
+{% endblock content %}    
