--- a/pokedex/templates/index.html
+++ b/pokedex/templates/index.html
@@ -1,30 +1,29 @@
+<!-- templates/index.html -->
 {% extends "base.html" %}
-{% load static %}
-{% block title %}Menu{% endblock title %}
+{% block title %}Pokedex{% endblock title %}
 {% block content %}
-<p style="font-size: 1.7em; margin-top: 1em; margin-bottom: 1em;" class= "text-center">Choose what you want to see:</p>
-    <div class="container mt-4">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-6 mb-3">
-                        <a href="pokemon/">
-                            <button class="btn btn-outline-primary btn-lg btn-block">
-                                <img src="{% static 'pokemon.png' %}" alt="Pokemons" class="img-fluid">
-                                <span>Pokemons</span>
-                            </button>
-                        </a>
-                    </div>
-                    <div class="col-6 mb-3">
-                        <a href="trainer/">
-                        <button class="btn btn-outline-primary btn-lg btn-block">
-                            <img src="{% static 'trainer.png' %}" alt="Trainers" class="img-fluid" width="128" height="128">
-                            <span>Trainers</span>
-                        </button>
-                        </a>
-                    </div>
-                </div>
+<p class="p-2">Lista de pokemones</p>
+<a href="{% url 'pokedex:add_pokemon' %}">Agregar pokemon</a>
+<div class="card-group">
+    {% for pokemon in pokemons %}
+        <div class="card">
+            <img src="{{ pokemon.picture.url }}" alt="{{ pokemon }}" class="pokemon-image">
+            <div class="card-body">
+                <h5 class="card-title">{{ pokemon }}</h5>
+                <p class="card-text">Entrenador: {{ pokemon.trainer }}</p>
+                <p class="card-text">Peso: {{ pokemon.height }}</p>
+                
+                <a href="pokemon/{{ pokemon.pk }}" class="btn btn-primary">
+                    <i class="fa-solid fa-eye"></i>
+                </a>
+                <a href="edit_pokemon/{{ pokemon.pk }}" class="btn btn-primary">
+                    <i class="fa-solid fa-pencil"></i>
+                </a>
+                <a href="delete_pokemon/{{ pokemon.pk }}" class="btn btn-danger">
+                    <i class="fa-solid fa-trash"></i>
+                </a>
             </div>
         </div>
-    </div>
-{% endblock content %}    
+    {% endfor %}
+</div>
+{% endblock content %}
