--- a/pokedex/templates/login.html
+++ b/pokedex/templates/login.html
@@ -1,31 +1,22 @@
 {% extends "base.html" %}
-{% load static %}
 {% block title %}Login{% endblock title %}
 {% block content %}
-<div class="container">
-    <div class="row justify-content-center" style="margin-top: 5em;">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <h2 class="card-title text-center">Inicio de sesión</h2>
-                    <form action="{% url 'pokedex:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="username">Username:</label>
-                            <input type="text" class="form-control" id="username" name="username" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Password:</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                        </div>
-                    </form>
-                </div>
+<div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+        <h2>Inicio de sesión</h2>
+        <form action="{% url 'pokedex:login' %}" method="post">
+            {% csrf_token %}
+            <div>
+                <label for="username">Usuario:</label>
+                <input type="text" name="username" id="username" required>
             </div>
-        </div>
+            <div>
+                <label for="password">Contraseña:</label>
+                <input type="password" name="password" id="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Ingresar</button>
+        </form>
     </div>
-</div>
 
+</div>
 {% endblock content %}
