--- a/pokedex/templates/login.html
+++ b/pokedex/templates/login.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock title %}
 {% block content %}
-<div class="row d-flex justify-content-center">
-    <div class="col-md-6">
-        <h2>Inicio de sesión</h2>
-        <form action="{% url 'pokedex:login' %}" method="post">
-            {% csrf_token %}
+    <div class="row d-flex justify-content-centet">
+        <div class="col-md-6">
+            <h2>Inicio de sesión</h2>
+            <form action="{%url 'pokedex:login'%}" method="post">
+            {%csrf_token%}
             <div>
                 <label for="username">Usuario:</label>
                 <input type="text" name="username" id="username" required>
@@ -15,8 +15,7 @@
                 <input type="password" name="password" id="password" required>
             </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
-        </form>
+            </form>
+        </div>   
     </div>
-
-</div>
 {% endblock content %}
