--- a/pokedex/templates/trainer_form.html
+++ b/pokedex/templates/trainer_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Pokedex{% endblock title %}
+{% block title %}Entrenadores{% endblock title %}
 {% block content %}
     <form method = "post" enctype="multipart/form-data">
         {%csrf_token%}
